isBlank() POR (busqueda.trim().isEmpty()
Para Java + precario ja